adap notebook training cleanup

--- a/orthogon/adaptive-orthogonal/training_hgnn_moe.ipynb
+++ b/orthogon/adaptive-orthogonal/training_hgnn_moe.ipynb
@@ -365,6 +365,113 @@
         "# run_demo_command(\"HGNN-MoE (Adaptive Ortho)\", dict_to_cli_args(demo_adaptive_hgnn_moe))\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<h1>Architectural Defaults</h1>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# ---\n",
+        "# ## ⚙️ Command-Line Argument Reference\n",
+        "\n",
+        "This section provides a comprehensive reference for all the command-line arguments available in the `run_gnn_moe.py` script. These arguments correspond to the fields in the `GNNMoEConfig` class.\n",
+        "\n",
+        "### **Model Architecture**\n",
+        "\n",
+        "| Argument | Type | Default | Description |\n",
+        "| :--- | :--- | :--- | :--- |\n",
+        "| `--embed_dim` | int | 512 | The dimensionality of the token embeddings. |\n",
+        "| `--num_layers` | int | 8 | The number of transformer layers in the model. |\n",
+        "| `--num_heads` | int | 8 | The number of attention heads in each transformer layer. |\n",
+        "| `--num_experts` | int | 4 | The number of experts in each Mixture of Experts (MoE) layer. |\n",
+        "| `--ffn_dim_multiplier` | int | 4 | Multiplier for the feed-forward network dimension relative to `embed_dim`. |\n",
+        "| `--vocab_size` | int | 50257 | The size of the vocabulary (defaults to GPT-2's vocab size). |\n",
+        "| `--max_seq_length` | int | 1024 | The maximum sequence length the model can handle. |\n",
+        "| `--dropout_rate` | float | 0.1 | The dropout rate used in the model. |\n",
+        "\n",
+        "### **GNN / HGNN Coupler**\n",
+        "\n",
+        "| Argument | Type | Default | Description |\n",
+        "| :--- | :--- | :--- | :--- |\n",
+        "| `--coupler_type` | str | \"GNN\" | The type of expert coupler to use. Options: `\"GNN\"`, `\"HGNN\"`. |\n",
+        "| `--gnn_layers` | int | 1 | The number of layers in the GNN/HGNN coupler. |\n",
+        "| `--hgnn_conv_type` | str | \"HypergraphConv\" | The type of PyG convolution to use for the HGNN. |\n",
+        "| `--static_hyperedge_strategy` | str | \"all_pairs\" | The strategy for creating static hyperedges. Options: `\"all_pairs\"`, `\"all_triplets\"`. |\n",
+        "| `--hgnn_learnable_edge_weights`| bool | `False` | If set, the weights of the hyperedges will be learnable parameters. |\n",
+        "\n",
+        "### **Training Parameters**\n",
+        "\n",
+        "| Argument | Type | Default | Description |\n",
+        "| :--- | :--- | :--- | :--- |\n",
+        "| `--epochs` | int | 5 | The total number of training epochs. |\n",
+        "| `--batch_size` | int | 32 | The number of sequences in each training batch. |\n",
+        "| `--learning_rate` | float | 3e-4 | The initial learning rate for the AdamW optimizer. |\n",
+        "| `--lr_scheduler_type` | str | \"cosine\" | The learning rate scheduler type. Options: `\"cosine\"`, `\"linear\"`, `\"step\"`. |\n",
+        "| `--warmup_steps` | int | 1000 | The number of warmup steps for the learning rate scheduler. |\n",
+        "| `--weight_decay` | float | 0.01 | The weight decay to apply during optimization. |\n",
+        "| `--grad_clip_value` | float | 1.0 | The value to clip gradients at to prevent exploding gradients. |\n",
+        "\n",
+        "### **Dataset & Data Handling**\n",
+        "\n",
+        "| Argument | Type | Default | Description |\n",
+        "| :--- | :--- | :--- | :--- |\n",
+        "| `--dataset_name` | str | \"wikitext\" | The name of the Hugging Face dataset to use. |\n",
+        "| `--dataset_config_name` | str | \"wikitext-2-v1\"| The specific configuration of the dataset. |\n",
+        "| `--num_train_samples` | int | `None` | The number of training samples to use (if `None`, uses the full dataset). |\n",
+        "| `--num_eval_samples` | int | `None` | The number of evaluation samples to use (if `None`, uses the full dataset). |\n",
+        "| `--num_test_samples` | int | `None` | The number of test samples to use (if `None`, uses the full dataset). |\n",
+        "\n",
+        "### **Static Weight Orthogonality (Phase 2.1)**\n",
+        "\n",
+        "| Argument | Type | Default | Description |\n",
+        "| :--- | :--- | :--- | :--- |\n",
+        "| `--apply_weight_orthogonality_loss` | bool | `False` | If set, applies a static orthogonality loss to the expert weights. |\n",
+        "| `--weight_orthogonality_loss_weight` | float | 0.01 | The strength of the static orthogonality loss. |\n",
+        "| `--weight_orthogonality_normalization` | str | \"frobenius\" | The normalization method for the orthogonality loss. |\n",
+        "\n",
+        "### **Adaptive Weight Orthogonality (Phase 2.2)**\n",
+        "\n",
+        "| Argument | Type | Default | Description |\n",
+        "| :--- | :--- | :--- | :--- |\n",
+        "| `--adaptive_weight_orthogonality` | bool | `False` | If set, enables the adaptive orthogonality system. This overrides static settings. |\n",
+        "| `--initial_weight_orthogonality_strength`| float | 0.1 | The starting strength of the adaptive orthogonality constraint. |\n",
+        "| `--minimum_weight_orthogonality_strength`| float | 0.001 | The minimum strength the constraint can decay to. |\n",
+        "| `--maximum_weight_orthogonality_strength`| float | 0.3 | The maximum strength the constraint can be boosted to. |\n",
+        "| `--adaptive_decay_schedule` | str | \"cosine\" | The decay schedule for the constraint strength. Options: `\"cosine\"`, `\"exponential\"`, `\"linear\"`, `\"step\"`. |\n",
+        "| `--adaptation_frequency` | int | 500 | The number of training steps between adaptation checks. |\n",
+        "| `--target_specialization_score` | float | 0.95 | The target orthogonality score the controller aims for. |\n",
+        "| `--specialization_tolerance` | float | 0.02 | The tolerance band (±) around the target specialization score. |\n",
+        "| `--layer_specific_adaptation` | bool | `True` | If set, applies different constraint strengths to different layers. |\n",
+        "| `--deeper_layer_scaling` | float | 0.8 | The scaling factor for reducing constraint strength in deeper layers. |\n",
+        "| `--performance_aware_adaptation` | bool | `True` | If set, the controller considers model performance when adapting. |\n",
+        "| `--performance_monitor_window` | int | 100 | The number of steps to average performance over. |\n",
+        "| `--collapse_detection_threshold` | float | 0.1 | The specialization score threshold for detecting expert collapse. |\n",
+        "| `--emergency_constraint_boost` | bool | `True` | If set, enables the emergency boost mechanism to prevent collapse. |\n",
+        "| `--emergency_boost_multiplier` | float | 2.0 | The multiplier for the constraint strength during an emergency boost. |\n",
+        "\n",
+        "### **Logging & System**\n",
+        "\n",
+        "| Argument | Type | Default | Description |\n",
+        "| :--- | :--- | :--- | :--- |\n",
+        "| `--run_name` | str | `None` | A unique name for the training run. If `None`, a name is generated. |\n",
+        "| `--checkpoint_dir` | str | \"./checkpoints\" | The directory to save model checkpoints. |\n",
+        "| `--log_every` | int | 100 | The number of steps between logging training progress. |\n",
+        "| `--eval_every` | int | 500 | The number of steps between running evaluation. |\n",
+        "| `--save_best_only` | bool | `True` | If set, only saves the checkpoint with the best evaluation loss. |\n",
+        "| `--seed` | int | 42 | The random seed for reproducibility. |\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
     }
   ],
   "metadata": {
