--- a/optimized_hgnn_moe.ipynb
+++ b/optimized_hgnn_moe.ipynb
@@ -1,37 +1,20 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "machine_shape": "hm",
-      "gpuType": "A100"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
-        "id": "u8x17zlSzp8q",
-        "collapsed": true,
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "collapsed": true,
+        "id": "u8x17zlSzp8q",
         "outputId": "6c37fe95-3eea-495d-ef73-2c9f7b08ce28"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Requirement already satisfied: torch in /usr/local/lib/python3.11/dist-packages (2.6.0+cu124)\n",
             "Requirement already satisfied: datasets in /usr/local/lib/python3.11/dist-packages (2.14.4)\n",
@@ -282,30 +265,26 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
       "metadata": {
         "id": "t_493nvLi32n"
-      }
+      },
+      "source": []
     },
     {
       "cell_type": "code",
-      "source": [
-        "#print(torch.__version__)\n",
-        "!pip install pyg_lib torch_scatter torch_sparse torch_cluster torch_spline_conv -f https://data.pyg.org/whl/torch-2.6.0+cu124.html"
-      ],
+      "execution_count": 1,
       "metadata": {
-        "id": "IXQNwA_X4FcH",
-        "collapsed": true,
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "collapsed": true,
+        "id": "IXQNwA_X4FcH",
         "outputId": "8b52e9a0-356e-43b4-91d9-dcf3821ff610"
       },
-      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Looking in links: https://data.pyg.org/whl/torch-2.6.0+cu124.html\n",
             "Collecting pyg_lib\n",
@@ -329,47 +308,35 @@
             "Successfully installed pyg_lib-0.4.0+pt26cu124 torch_cluster-1.6.3+pt26cu124 torch_scatter-2.1.2+pt26cu124 torch_sparse-0.6.18+pt26cu124 torch_spline_conv-1.2.2+pt26cu124\n"
           ]
         }
+      ],
+      "source": [
+        "#print(torch.__version__)\n",
+        "!pip install pyg_lib torch_scatter torch_sparse torch_cluster torch_spline_conv -f https://data.pyg.org/whl/torch-2.6.0+cu124.html"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "<h1>Optimized Test Run</h1>\n"
-      ],
       "metadata": {
         "id": "MuvohLe0Mqd8"
-      }
+      },
+      "source": [
+        "<h1>Optimized Test Run</h1>\n"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!python run_gnn_moe.py \\\n",
-        "  --coupler_type HGNN \\\n",
-        "  --static_hyperedge_strategy all_pairs \\\n",
-        "  --hgnn_learnable_edge_weights \\\n",
-        "  --embed_dim 512 \\\n",
-        "  --num_layers 8 \\\n",
-        "  --batch_size 16 \\\n",
-        "  --learning_rate 0.0005 \\\n",
-        "  --gnn_layers 3 \\\n",
-        "  --num_experts 2 \\\n",
-        "  --epochs 10 \\\n",
-        "  --eval_every 250 \\\n",
-        "  --run_name \"hgnn_vs_gnn_optimal_showdown\" \\\n",
-        "  --dataset_config_name wikitext-2-v1\n"
-      ],
+      "execution_count": null,
       "metadata": {
-        "id": "GGvQC2DYchRt",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "GGvQC2DYchRt",
         "outputId": "306e516f-1f53-4567-c6c0-64fb9a76ccac"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.11/dist-packages/transformers/utils/generic.py:441: FutureWarning: `torch.utils._pytree._register_pytree_node` is deprecated. Please use `torch.utils._pytree.register_pytree_node` instead.\n",
             "  _torch_pytree._register_pytree_node(\n",
@@ -416,16 +383,175 @@
             "Epoch 1/10:   8% 90/1134 [03:08<36:45,  2.11s/it, loss=7.0344, grad=0.75, tok/s=976, lr=5.0e-04]"
           ]
         }
+      ],
+      "source": [
+        "!python run_gnn_moe.py \\\n",
+        "  --coupler_type HGNN \\\n",
+        "  --static_hyperedge_strategy all_pairs \\\n",
+        "  --hgnn_learnable_edge_weights \\\n",
+        "  --embed_dim 512 \\\n",
+        "  --num_layers 8 \\\n",
+        "  --batch_size 16 \\\n",
+        "  --learning_rate 0.0005 \\\n",
+        "  --gnn_layers 3 \\\n",
+        "  --num_experts 2 \\\n",
+        "  --epochs 10 \\\n",
+        "  --eval_every 250 \\\n",
+        "  --run_name \"hgnn_vs_gnn_optimal_showdown\" \\\n",
+        "  --dataset_config_name wikitext-2-v1\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<h1>Ghost Ops</h1>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Ghost Expert Architecture Training\n"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "B2AMEeBWd9LL"
       },
+      "outputs": [],
+      "source": [
+        "# Ghost Expert Architecture Training\n",
+        "!python -m ghost.run_gnn_moe \\\n",
+        "  --embed_dim 256 \\\n",
+        "  --num_layers 4 \\\n",
+        "  --num_experts 4 \\\n",
+        "  --num_ghost_experts 4 \\\n",
+        "  --ghost_activation_threshold 0.75 \\\n",
+        "  --ghost_learning_rate 1e-4 \\\n",
+        "  --epochs 3 \\\n",
+        "  --max_batches_per_epoch 100 \\\n",
+        "  --eval_every 50 \\\n",
+        "  --run_name \"ghost_notebook_demo\" \\\n",
+        "  --dataset_config_name wikitext-2-v1\n"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
-      "outputs": []
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Test different ghost configurations\n",
+        "!python ghost/tests/run_ghost_sweep.py\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Test different architecture configurations\n",
+        "!python ghost/tests/run_architecture_sweep.py\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import glob\n",
+        "import os\n",
+        "\n",
+        "# Find latest sweep\n",
+        "sweep_dirs = glob.glob('ghost/tests/sweeps/*')\n",
+        "if sweep_dirs:\n",
+        "    latest_sweep = max(sweep_dirs, key=os.path.getctime)\n",
+        "    print(f\"Analyzing: {latest_sweep}\")\n",
+        "    !python ghost/tests/enhanced_analysis.py {latest_sweep}\n",
+        "else:\n",
+        "    print(\"No sweeps found\")\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Load and Visualize"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import json\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "# Load latest training log\n",
+        "log_files = glob.glob('ghost/tests/sweeps/*/*/training_log.json')\n",
+        "if log_files:\n",
+        "    latest_log = max(log_files, key=os.path.getctime)\n",
+        "    with open(latest_log, 'r') as f:\n",
+        "        training_data = json.load(f)\n",
+        "    \n",
+        "    df = pd.DataFrame(training_data)\n",
+        "    \n",
+        "    # Plot ghost activations over time\n",
+        "    fig, (ax1, ax2) = plt.subplots(2, 1, figsize=(12, 8))\n",
+        "    \n",
+        "    # Ghost activations\n",
+        "    ghost_activations = pd.DataFrame(df['ghost_activations'].tolist(), index=df['step'])\n",
+        "    ghost_activations.plot(ax=ax1, title='Ghost Expert Activation Levels')\n",
+        "    ax1.set_ylabel('Activation Level')\n",
+        "    \n",
+        "    # Saturation vs Orthogonality\n",
+        "    ax2.plot(df['step'], df['saturation_level'], label='Saturation', color='red')\n",
+        "    ax2_twin = ax2.twinx()\n",
+        "    ax2_twin.plot(df['step'], df['orthogonality_score'], label='Orthogonality', color='blue')\n",
+        "    ax2.set_title('Expert Dynamics')\n",
+        "    ax2.set_xlabel('Training Step')\n",
+        "    ax2.legend(loc='upper left')\n",
+        "    ax2_twin.legend(loc='upper right')\n",
+        "    \n",
+        "    plt.tight_layout()\n",
+        "    plt.show()\n",
+        "    \n",
+        "    print(f\"Final ghost activations: {df.iloc[-1]['ghost_activations']}\")\n",
+        "    print(f\"Final saturation: {df.iloc[-1]['saturation_level']:.3f}\")\n",
+        "else:\n",
+        "    print(\"No training logs found\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "A100",
+      "machine_shape": "hm",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
